007-antlr4-definitive-guide/chapter04-a-quick-tour/section01-matching-an-arithmetic-expression-language/src/main/java/LibExpr.g4
grammar LibExpr;            // 为了和疻先的语法区分开, 注行了重命名
import CommonLexerRules;    // 引入CommonlexerRules.g4中的全部规则

/** 起始规则，语法分析的起点。 */
prog:   stat+ ;

stat:   expr NEWLINE
    |   ID '=' expr NEWLINE
    |   NEWLINE
    ;

expr:   expr ('*'|'/') expr
    |   expr ('+'|'-') expr
    |   INT
    |   ID
    |   '(' expr ')'
    ;
